Fixed validation error due to Windows paths. Added charges in SME from adduct. Removed 2d structure column. Minor code refactoring.